# pdf-orientation-corrector

./: .gitignore  README.md  pdf_orientation_corrector.py  pyproject.toml
pdf_orientation_corrector/: __init__.py
