[tool.poetry]
name = "pdf-orientation-corrector"
version = "0.1.2"
description = "A Python module to automatically detect and correct the orientation of pages in PDF documents."
authors = ["James Standbridge <james.standbridge.git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PyPDF2 = "^3.0.1"
pytesseract = "^0.3.10"
pdf2image = "^1.16.3"
Pillow = "^10.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
